<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <!--Spinner danh mục -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Tên danh mục:" />

        <Spinner
            android:id="@+id/spDanhMuc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <!-- Mã sản phẩm -->
    <LinearLayout
        android:id="@+id/layoutMaSP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Mã SP:" />

        <EditText
            android:id="@+id/edtMaSanPham"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Mã sản phẩm" />
    </LinearLayout>
    <!-- Tên sản phẩm -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Tên SP:" />

        <EditText
            android:id="@+id/edtTenSanPham"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Nhập tên sản phẩm" />
    </LinearLayout>

    <!-- Giá sản phẩm -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Giá SP:" />

        <EditText
            android:id="@+id/edtGiaSanPham"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Nhập giá sản phẩm"
            android:inputType="number" />
    </LinearLayout>

    <!-- Số lượng -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Số lượng:" />

        <EditText
            android:id="@+id/edtSoLuong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Nhập số lượng"
            android:inputType="number" />
    </LinearLayout>

    <!-- Đơn vị tính -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Đơn vị tính:" />

        <EditText
            android:id="@+id/edtDonViTinh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Nhập đơn vị tính" />
    </LinearLayout>

    <!-- Ngày nhập -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Ngày nhập:" />

        <EditText
            android:id="@+id/edtNgayNhap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Nhập ngày nhập" />
    </LinearLayout>

    <!-- Nút Lưu -->
    <Button
        android:id="@+id/btnLuu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lưu"
        android:layout_marginTop="16dp" />

    <!-- Nút Hủy -->
    <Button
        android:id="@+id/btnHuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hủy"
        android:layout_marginTop="8dp" />

</LinearLayout> 